--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "rdflib": "^0.20.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.0",
+    "solid-auth-client": "^2.3.0",
+    "solid-file-client": "^0.5.1",
+    "yoda-design-system": "0.1.0-alpha"
   },
   "scripts": {
     "start": "react-scripts start",
