--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "rdflib": "^0.20.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
