--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "react-scripts": "3.0.0",
     "solid-auth-client": "^2.3.0",
     "solid-file-client": "^0.5.1",
+    "sparql-fiddle": "git+https://github.com/jeff-zucker/sparql-fiddle.git",
     "yoda-design-system": "0.1.0-alpha"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  },
+  "homepage": "https://soilprotocol.github.io/ownchat/"
 }
